--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
         </div>
         <div class="menu_item__wrapper">
-            <a href="./index.html#services">
+            <a href="./services.html">
                 <p>Services</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
@@ -87,17 +87,28 @@
                             </div>
                             <div class="menu_item">
                                 <div class="d-flex align-items-center">
-                                    <p class="menu_item__text">Services</p>
+                                    <a href="./services.html">
+                                        <p class="menu_item__text">Services</p>
+                                    </a>
                                     <img src="./assets/images/down_icon.svg" alt="">
                                 </div>
                                 <div class="submenu">
                                     <ul>
-                                        <li>Overview</li>
-                                        <li>Spare Parts</li>
-                                        <li>Exchange</li>
-
-                                        <li>AOG</li>
-                                        <li>Repair <br>Management</li>
+                                        <a href="./services.html">
+                                            <li>Overview</li>
+                                        </a>
+                                        <a href="./index.html#spare">
+                                            <li>Spare Parts</li>
+                                        </a>
+                                        <a href="./index.html#exchange">
+                                            <li>Exchange</li>
+                                        </a>
+                                        <a href="./index.html#aog">
+                                            <li>AOG</li>
+                                        </a>
+                                        <a href="./index.html#repair">
+                                            <li>Repair <br>Management</li>
+                                        </a>
 
 
                                     </ul>
@@ -112,7 +123,7 @@
                                 </div>
                                 <div class="submenu">
                                     <ul>
-                                        <a href="#footer">
+                                        <a href="./contact.html">
                                             <li>Contact us</li>
                                         </a>
                                         <a href="./contact.html">
@@ -123,7 +134,7 @@
                             </div>
 
                         </div>
-                        <button class="rfq_button">Send RFQ</button>
+                        <a href="./contact.html"><button class="rfq_button">Send RFQ</button></a>
 
                     </div>
                 </div>
@@ -159,8 +170,9 @@
                             </div>
                             <p class="text-center hero_title">DRIVING CONFIDENCE, DELIVERING EXCELLENCE</p>
                             <div class="d-flex justify-content-center align-items-center">
-                                <button class="d-flex justify-content-center align-items-center hero_btn">We Bring
-                                    Aviation Closer To You</button>
+                                <a href="./index.html#aboutUs"><button
+                                        class="d-flex justify-content-center align-items-center hero_btn">We Bring
+                                        Aviation Closer To You</button></a>
                             </div>
                         </div>
                     </div>
@@ -250,43 +262,43 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1">
+                <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1" id="spare">
                     <div class="service_wrapper">
                         <p class="service_name">Spare Parts</p>
                         <img src="./assets/images/services.svg" class="service_img" alt="">
                         <p class="service_description">Horizon Mechanics has seven wheel and brake facilities with the
                             capability to service a high volume of wheels and
                             brakes.</p>
-                        <button class="service_btn">Learn More</button>
+                        <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1">
+                <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1" id="exchange">
                     <div class="service_wrapper">
                         <p class="service_name">Exchanges</p>
                         <img src="./assets/images/exchange_img.svg" class="service_img" alt="">
                         <p class="service_description">Our flexible exchange and loan services enable airlines to obtain
                             high-quality, immediate replacement of expensive parts
                             while avoiding</p>
-                        <button class="service_btn">Learn More</button>
+                        <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1">
+                <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1" id="aog">
                     <div class="service_wrapper">
                         <p class="service_name">AOG</p>
                         <img src="./assets/images/aog_img.svg" class="service_img" alt="">
                         <p class="service_description">We solve our customers challenges by providing 24/7 AOG (Aircraft
                             on
                             Ground) services, which ensure prompt resolution of issues through.</p>
-                        <button class="service_btn">Learn More</button>
+                        <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1">
+                <div class="col-sm-12 col-md-6 col-lg-3 px-0 px-sm-1" id="repair">
                     <div class="service_wrapper">
                         <p class="service_name">Repair management</p>
                         <img src="./assets/images/repair_img.svg" class="service_img" alt="">
                         <p class="service_description">Horizon Mechanics offers comprehensive aircraft repair and
                             maintenance services. Our competencies in highquality repair.</p>
-                        <button class="service_btn">Learn More</button>
+                        <a href="./services.html"><button class="service_btn">Learn More</button></a>
                     </div>
                 </div>
             </div>
@@ -560,7 +572,7 @@
                                 aircraft
                                 spare
                                 parts.</p>
-                            <button class="certificate_btn">Get in Touch</button>
+                            <a href="./contact.html"><button class="certificate_btn">Get in Touch</button></a>
                         </div>
                     </div>
                     <div class="col-12 mt-3 ps-4 ps-sm-0">
@@ -620,32 +632,52 @@
                                 <a href="./index.html#aboutUs">
                                     <p>About us</p>
                                 </a>
-                                <p>Business Ethics</p>
-                                <p>Our Values</p>
-                                <p>Partners</p>
+                                <a href="./index.html#business">
+                                    <p>Business Ethics</p>
+                                </a>
+                                <a href="./index.html#values">
+                                    <p>Our Values</p>
+                                </a>
+                                <a href="./index.html#suppliers">
+                                    <p>Partners</p>
+                                </a>
                                 <a href="./certificates.html">
                                     <p>Certificates</p>
                                 </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
-                            <p class="footer_header">
-                                Services
-                            </p>
-                            <div class="services_links">
-                                <p>Spare parts</p>
-                                <p>Exchange</p>
-                                <p>AOG</p>
-                                <p>Repair Management</p>
+
 
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
-                            <p class="footer_header">
-                                Contact us
-                            </p>
+                            <a href="./services.html">
+                                <p class="footer_header">
+                                    Services
+                                </p>
+                            </a>
+                            <div class="services_links">
+                                <a href="./index.html#spare">
+                                    <p>Spare parts</p>
+                                </a>
+                                <a href="./index.html#exchange">
+                                    <p>Exchange</p>
+                                </a>
+                                <a href="./index.html#aog">
+                                    <p>AOG</p>
+                                </a>
+                                <a href="./index.html#repair">
+                                    <p>Repair Management</p>
+                                </a>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
+                            <a href="./contact.html">
+                                <p class="footer_header">
+                                    Contact us
+                                </p>
+                            </a>
                             <div class="contact_links">
-                                <a href="#footer">
+                                <a href="./contact.html">
                                     <p>Contact with Us</p>
                                 </a>
                                 <a href="./contact.html">
