--- a/src/contact.html
+++ b/src/contact.html
@@ -45,20 +45,20 @@
 
         </div>
         <div class="menu_item__wrapper">
-            <a href="#services">
+            <a href="./services.html">
                 <p>Services</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
         <div class="menu_item__wrapper">
-            <a href="#footer">
+            <a href="./contact.html">
                 <p>Contact us</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
         </div>
 
         <div class="menu_item__wrapper">
-            <a href="#footer">
+            <a href="./contact.html">
                 <p>Request a Quote</p>
                 <img src="./assets/images/arrow-narrow-right.svg" class="menu_item__img" alt="">
             </a>
@@ -92,17 +92,28 @@
                             </div>
                             <div class="menu_item">
                                 <div class="d-flex align-items-center">
-                                    <p class="menu_item__text">Services</p>
+                                    <a href="./services.html">
+                                        <p class="menu_item__text">Services</p>
+                                    </a>
                                     <img src="./assets/images/down_icon.svg" alt="">
                                 </div>
                                 <div class="submenu">
                                     <ul>
-                                        <li>Overview</li>
-                                        <li>Spare Parts</li>
-                                        <li>Exchange</li>
-
-                                        <li>AOG</li>
-                                        <li>Repair <br>Management</li>
+                                        <a href="./services.html">
+                                            <li>Overview</li>
+                                        </a>
+                                        <a href="./index.html#spare">
+                                            <li>Spare Parts</li>
+                                        </a>
+                                        <a href="./index.html#exchange">
+                                            <li>Exchange</li>
+                                        </a>
+                                        <a href="./index.html#aog">
+                                            <li>AOG</li>
+                                        </a>
+                                        <a href="./index.html#repair">
+                                            <li>Repair <br>Management</li>
+                                        </a>
 
 
                                     </ul>
@@ -117,7 +128,7 @@
                                 </div>
                                 <div class="submenu">
                                     <ul>
-                                        <a href="#footer">
+                                        <a href="./contact.html">
                                             <li>Contact us</li>
                                         </a>
                                         <a href="./contact.html">
@@ -128,7 +139,7 @@
                             </div>
 
                         </div>
-                        <button class="rfq_button">Send RFQ</button>
+                        <a href="./contact.html"><button class="rfq_button">Send RFQ</button></a>
 
                     </div>
                 </div>
@@ -326,32 +337,52 @@
                                 <a href="./index.html#aboutUs">
                                     <p>About us</p>
                                 </a>
-                                <p>Business Ethics</p>
-                                <p>Our Values</p>
-                                <p>Partners</p>
+                                <a href="./index.html#business">
+                                    <p>Business Ethics</p>
+                                </a>
+                                <a href="./index.html#values">
+                                    <p>Our Values</p>
+                                </a>
+                                <a href="./index.html#suppliers">
+                                    <p>Partners</p>
+                                </a>
                                 <a href="./certificates.html">
                                     <p>Certificates</p>
                                 </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
-                            <p class="footer_header">
-                                Services
-                            </p>
-                            <div class="services_links">
-                                <p>Spare parts</p>
-                                <p>Exchange</p>
-                                <p>AOG</p>
-                                <p>Repair Management</p>
+
 
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
-                            <p class="footer_header">
-                                Contact us
-                            </p>
+                            <a href="./services.html">
+                                <p class="footer_header">
+                                    Services
+                                </p>
+                            </a>
+                            <div class="services_links">
+                                <a href="./index.html#spare">
+                                    <p>Spare parts</p>
+                                </a>
+                                <a href="./index.html#exchange">
+                                    <p>Exchange</p>
+                                </a>
+                                <a href="./index.html#aog">
+                                    <p>AOG</p>
+                                </a>
+                                <a href="./index.html#repair">
+                                    <p>Repair Management</p>
+                                </a>
+
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 footer_item">
+                            <a href="./contact.html">
+                                <p class="footer_header">
+                                    Contact us
+                                </p>
+                            </a>
                             <div class="contact_links">
-                                <a href="#footer">
+                                <a href="./contact.html">
                                     <p>Contact with Us</p>
                                 </a>
                                 <a href="./contact.html">
