feat: linkedin link

--- a/src/contact.html
+++ b/src/contact.html
@@ -319,7 +319,8 @@
                                                         font-weight: 500;
                                                         line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
@@ -412,7 +413,8 @@
                                                                                 font-weight: 500;
                                                                                 line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
@@ -424,7 +426,8 @@
                                                                                 font-weight: 500;
                                                                                 line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
