--- a/src/services.html
+++ b/src/services.html
@@ -330,7 +330,8 @@
                                                         font-weight: 500;
                                                         line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
@@ -423,7 +424,8 @@
                                                                                 font-weight: 500;
                                                                                 line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
@@ -435,7 +437,8 @@
                                                                                 font-weight: 500;
                                                                                 line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
