--- a/src/certificates.html
+++ b/src/certificates.html
@@ -229,7 +229,8 @@
                                                         font-weight: 500;
                                                         line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
@@ -322,7 +323,8 @@
                                                                                 font-weight: 500;
                                                                                 line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
@@ -334,7 +336,8 @@
                                                                                 font-weight: 500;
                                                                                 line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
-                                    <img src="./assets/images/linkedin_icon.svg" alt="">
+                                    <a href="https://www.linkedin.com/company/horizonmechanicsllc
+                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
                                     <img src="./assets/images/mail_icon.svg" alt="">
                                 </div>
                             </div>
