--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,13 @@
                                     </a>
                                     <img src="./assets/images/down_icon.svg" alt="">
                                 </div>
+                                <div class="submenu">
+                                    <ul>
+                                        <a href="./certificates.html">
+                                            <li>Certificates</li>
+                                        </a>
+                                    </ul>
+                                </div>
 
                             </div>
                             <div class="menu_item">
@@ -368,7 +375,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-4 px-0 px-sm-1">
                     <div class="business_wrapper">
                         <p class="business_number">04</p>
-                        <div class="business_item__wrapper">
+                        <div class="business_item__wrapper card_min__height">
                             <p class="business_item__title">Transparency Statement</p>
                             <p class="business_item__subtitle">Always Open Communication</p>
                             <p class="business_item__description">Transparency is fundamental to our
@@ -383,8 +390,8 @@
                 <div class="col-sm-12 col-md-12 col-lg-4 px-0 px-sm-1">
                     <div class="business_wrapper">
                         <p class="business_number">05</p>
-                        <div class="business_item__wrapper">
-                            <p class="business_item__title">Compliance and Legal <br> Adherence</p>
+                        <div class="business_item__wrapper card_min__height">
+                            <p class="business_item__title">Compliance and Legal Adherence</p>
                             <p class="business_item__subtitle">Regulatory Standards Focus</p>
                             <p class="business_item__description">At Horizon Mechanics, we
                                 adhere to strict compliance standards and uphold all relevant regulations and legal
@@ -396,10 +403,10 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-4 px-0 px-sm-1">
-                    <div class="business_wrapper border-none">
+                    <div class="business_wrapper border-none card_min__height">
                         <p class="business_number">06</p>
                         <div class="business_item__wrapper">
-                            <p class="business_item__title">Global Reach and <br> Partnerships</p>
+                            <p class="business_item__title">Global Reach and Partnerships</p>
                             <p class="business_item__subtitle">Connecting Aviation Worldwide</p>
                             <p class="business_item__description">With a global network of international partners and
                                 suppliers, we have the capability to serve clients around the world
@@ -507,7 +514,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <p class="suppliers_section__title">Our reliable suppliers
+                    <p class="suppliers_section__title">Our reliable suppliers and
                         business partners</p>
                 </div>
             </div>
