fix: service image changed

--- a/src/contact.html
+++ b/src/contact.html
@@ -193,14 +193,14 @@
                                 <p>Email Address</p>
                             </label>
                             <input type="text" class="contact_input d-block" id="email" class="d-block"
-                                placeholder="Your Company Name">
+                                placeholder="Your Email Address">
                         </div>
                         <div class="col-lg-6 col-sm-12">
                             <label class="contact_form__label" for="number">
                                 <p>Phone Number</p>
                             </label>
                             <input type="text" class="contact_input d-block" id="number" class="d-block"
-                                placeholder="Your Company Name">
+                                placeholder="Your Phone Number">
                         </div>
                         <p class="subject">Select Subject?</p>
                         <div class="row">
