--- a/src/services.html
+++ b/src/services.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4 px-0 px-sm-2">
                     <div class="sp_service__wrappper">
-                        <img src="./assets/images/sp_image_3.svg" class="sp_image" alt="">
+                        <img src="./assets/images/sp_image_3.jpg" class="sp_image" alt="">
                         <div class="spare_service__info">
                             <p>Interiors</p>
                             <img src="./assets/images/arrow-up-right.svg" class="sp_icon" alt="">
