--- a/src/certificates.html
+++ b/src/certificates.html
@@ -72,8 +72,10 @@
                             </div> -->
 
                         <img src="./assets/images/menu_icon.svg" class="mobile_menu" alt="">
-                        <img src="./assets/images/logo_mobile.svg" class="navbar_mobile__logo" alt="">
-                        <img src="./assets/images/logo_small.svg" class="navbar_desktop__logo" alt="">
+                        <a class="navbar_mobile__logo" href="./index.html"><img src="./assets/images/logo_mobile.svg"
+                                class="navbar_mobile__logo" alt=""></a>
+                        <a class="navbar_desktop__logo" href="./index.html"><img src="./assets/images/logo_small.svg"
+                                class="navbar_desktop__logo" alt=""></a>
 
                         <div class="navbar d-flex justify-content-between align-items-center gap-60">
                             <div class="menu_item">
@@ -82,6 +84,13 @@
                                         <p class="menu_item__text">About us</p>
                                     </a>
                                     <img src="./assets/images/down_icon.svg" alt="">
+                                </div>
+                                <div class="submenu">
+                                    <ul>
+                                        <a href="./certificates.html">
+                                            <li>Certificates</li>
+                                        </a>
+                                    </ul>
                                 </div>
 
                             </div>
@@ -211,7 +220,8 @@
                     <div class="row">
 
                         <div class="col-12 pe-5 footer_item footer_logo__desktop">
-                            <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
+                            <a class="footer_logo" href="./index.html"><img src="./assets/images/footer_logo.svg"
+                                    class="footer_logo" alt=""></a>
                             <p style="color: #1E1C20;
                                                     font-size: 20px;
                                                     font-family: Figtree;
@@ -219,7 +229,8 @@
                                                     line-height: 32px;">We keep you up to date</p>
                             <div class="email_input__wrapper">
                                 <input type="text" placeholder="Your email address" class="email_input">
-                                <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
+                                <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
+                                        alt=""></a>
                             </div>
                             <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
                             <div class="social_meadia__wrapper">
@@ -230,8 +241,9 @@
                                                         line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
-                                    <img src="./assets/images/mail_icon.svg" alt="">
+    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                    <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
+                                            alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -304,7 +316,8 @@
                         </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 footer_item footer_logo__mobile">
                             <div style="display: flex; justify-content: center;">
-                                <img src="./assets/images/footer_logo.svg" class="footer_logo" alt="">
+                                <a class="footer_logo" href="./index.html"><img src="./assets/images/footer_logo.svg"
+                                        class="footer_logo" alt=""></a>
                             </div>
                             <p style="color: #1E1C20;
                                                                             font-size: 20px;
@@ -314,7 +327,8 @@
                             </p>
                             <div class="email_input__wrapper___mobile">
                                 <input type="text" placeholder="Your email address" class="email_input">
-                                <img src="./assets//images/email_icon.svg" class="email_icon" alt="">
+                                <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
+                                        alt=""></a>
                             </div>
                             <div class="social_meadia__wrapper___mobile">
                                 <p style="color: #262626;
@@ -324,8 +338,9 @@
                                                                                 line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
-                                    <img src="./assets/images/mail_icon.svg" alt="">
+                                        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                    <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
+                                            alt=""></a>
                                 </div>
                             </div>
                             <p class="copyrights">© 2024 Horizons Mechanic. All right reserved</p>
@@ -337,8 +352,9 @@
                                                                                 line-height: 24px;">Stay connected</p>
                                 <div class="social_media__icons">
                                     <a href="https://www.linkedin.com/company/horizonmechanicsllc
-                                    "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
-                                    <img src="./assets/images/mail_icon.svg" alt="">
+                                        "><img src="./assets/images/linkedin_icon.svg" alt=""></a>
+                                    <a href="mailto:sales@horizonmechanics.com"><img src="./assets/images/mail_icon.svg"
+                                            alt=""></a>
                                 </div>
                             </div>
                         </div>
